[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bleach>=6.3.0",
  "blinker>=1.9.0",
  "bootstrap-flask>=2.5.0",
  "dotenv>=0.9.9",
  "email-validator>=2.3.0",
  "flask>=3.1.2",
  "flask-ckeditor>=1.0.0",
  "flask-gravatar>=0.5.0",
  "flask-login>=0.6.3",
  "flask-sqlalchemy>=3.1.1",
  "flask-wtf>=1.2.2",
  "gravatar>=0.1",
  "greenlet>=3.3.0",
  "gunicorn>=23.0.0",
  "itsdangerous>=2.2.0",
  "markupsafe>=3.0.3",
  "psycopg[binary]>=3.1.0",

]
